--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <style type="text/css">
   h3
   {
-    font-size: 25px !important
+    font-size: 25px !important;
   }
   canvas {
   	border:1px solid black;
